# qntm

./: .founder-last-check  .gitignore  .mcp.json  AUTONOMY.md  CMO-REPORT-WAVE5.md  CPO-REPORT-WAVE5.md  ECHO-BOT-SPEC.md  FOUNDER-BOOT.md  FOUNDER-PLAN.md  FOUNDER-STATE.md  PRE_ALPHA_REVIEW.md  README.md  demo.md  go.mod  go.sum  integration_test.go  manifest  multi_account_test.go  package-lock.json  spec_test.go
.beads/: .beads-credential-key  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude-plugin/: marketplace.json
.company/: decision-rights-map.md  kpi-dictionary-v1.md  kpis.jsonl  last-check.json  mission-memo-v1.md  operating-calendar.md  prfaq-v0.1.md  qntm-channels.json  runway-model-v1.md  security-policy.md  target-customers-v1.md  thin-slice-product-plan.md  truth-register.md
announce/: announce.go  announce_test.go
channel/: .mcp.json  package.json  server.ts
cli/: agent_commands.go  agent_output.go  announce_commands.go  chat_commands.go  chat_store.go  chat_store_test.go  commands.go  display.go  display_test.go  gate.go  gate_chat.go  gate_chat_test.go  gate_promote.go  gate_secret.go  gateway_commands.go  handle_commands.go  root.go  storage.go  version.go  version_test.go  zz_admin_commands.go
client/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
conformance/: moltrust-aae-delegation-narrowing.json  run_aae_delegation.py
crypto/: suite.go
docs/: CHANGELOG.md  QSP-v1.0.md  QSP-v1.1.md  RELEASING.md  (+11 more)
python-dist/: README.md  pyproject.toml
python-dist/examples/: aps_bridge.py
python-dist/scripts/: build-binaries.sh
python-dist/src/qntm/: __init__.py  __main__.py  announce.py  cbor.py  cli.py  constants.py  crypto.py  did.py  entity.py  gate.py  gateway.py  governance.py  group.py  identity.py  invite.py  mcp.py  mcp_server.py  message.py  naming.py  wire.py
python-dist/tests/: test_announce.py  test_cli_gate.py  test_conv_id.py  test_cross_client.py  test_did.py  test_entity.py  test_entity_interop.py  test_gate.py  test_gate_cross.py  test_gate_rearch.py  test_gateway.py  test_group.py  test_interop.py  test_invite.py  test_mcp_server.py  test_message.py  test_naming.py  test_system_events.py  test_version.py  test_wrap.py
python-dist/tests/interop/: VECTORS.md  __init__.py  test_ed25519_x25519_vectors.py  verify_vectors_noble.mjs
(+458 files in other folders)
