[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qntm"
version = "0.4.20"
description = "qntm secure messaging protocol client library and CLI"
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.10"
dependencies = [
    "PyNaCl>=1.5.0",
    "cryptography>=42.0",
    "cbor2>=5.6",
    "certifi>=2024.0",
    "httpx>=0.27",
    "websockets>=12.0",
]
authors = [
    { name = "Corpo LLC", email = "hello@corpo.llc" },
]
keywords = ["messaging", "encryption", "security", "cli", "mcp", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://qntm.corpo.llc"
Repository = "https://github.com/corpollc/qntm"

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0.0"]

[project.scripts]
qntm = "qntm.cli:main"
qntm-mcp = "qntm.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qntm"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.qntm]
spec-version = "QSP-v1.1"
